--- a/data/techs.yml
+++ b/data/techs.yml
@@ -10,58 +10,404 @@ items:
      require_tech: 'tech_global_trade'
 #
 potions:
-   - name: 'Fire Resist'
-     data: 8195
-     require_tech: 'tech_alchemy'
-
-   - name: 'Swiftness'
-     data: 8194
-     require_tech: 'tech_malting' 
-
-   - name: 'Healing I'
-     data: 8197
-     require_tech: 'tech_brewing'
-
-   - name: 'Healing II'
-     data: 8229
+   - name: 'Night Vision 3:00'
+     data: 8230
      require_tech: 'tech_fermentation'
 #
-atom_developing_cottage_buff: 1.75
+   - name: 'Night Vision 8:00'
+     data: 8262
+     require_tech: 'tech_fermentation'
+#
+   - name: 'Water Breathing 3:00'
+     data: 8237
+     require_tech: 'tech_fermentation'
+#
+   - name: 'Water Breathing 8:00'
+     data: 8269
+     require_tech: 'tech_fermentation'
+#
+   - name: 'Instant Health I'
+     data: 8261
+     require_tech: 'tech_experimentation'
+#
+   - name: 'Speed I 3:00'
+     data: 8194
+     require_tech: 'tech_experimentation'
+#
+   - name: 'Fire Resistance 3:00'
+     data: 8227
+     require_tech: 'tech_experimentation'
+#
+   - name: 'Speed I 8:00'
+     data: 8258
+     require_tech: 'tech_malting'
+#
+   - name: 'Leaping I 3:00'
+     data: 8203
+     require_tech: 'tech_malting'
+#
+   - name: 'Regeneration I 0:45'
+     data: 8193
+     require_tech: 'tech_malting'
+#
+   - name: 'Instant Health II'
+     data: 8229
+     require_tech: 'tech_alchemy'
+#When the atom developing tech is researched, make these double.
+atom_developing_windmill_buff: 2
+atom_developing_cottage_buff: 2.0
+atom_developing_mine_buff: 2.0
+atom_developing_lab_buff: 2.0
 #
 techs:
+#==============================#
+#==========> Tier 1 <==========#
+#==============================#
    - id: 'tech_religion'
      name: 'Religion'
      beaker_cost: 500.0
      cost: 5000.0
      points: 50
-     require_techs:
 #
+   - id: 'tech_agriculture'
+     name: 'Agriculture'
+     beaker_cost: 500.0
+     cost: 5000.0
+     points: 50
+#
+   - id: 'tech_forestry'
+     name: 'Forestry'
+     beaker_cost: 500.0
+     cost: 5000.0
+     points: 50
+#
+   - id: 'tech_mining'
+     name: 'Mining'
+     beaker_cost: 500.0
+     cost: 5000.0
+     points: 50
+#
+   - id: 'tech_iron'
+     name: 'Iron'
+     beaker_cost: 500.0
+     cost: 5000.0
+     points: 50
+#==============================#
+#==========> Tier 2 <==========#
+#==============================#
    - id: 'tech_banking'
      name: 'Banking'
-     beaker_cost: 2500.0
+     beaker_cost: 2000.0
      cost: 15000.0
-     points: 50
+     points: 200
      require_techs: 'tech_religion'
 #
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-   - id: 'tech_priesthood'
-     name: 'Priesthood'
+   - id: 'tech_pottery'
+     name: 'Pottery'
      beaker_cost: 2000.0
-     cost: 10000.0
-     points: 500
-     require_techs: 'tech_brewing'
+     cost: 15000.0
+     points: 200
+     require_techs: 'tech_agriculture'
+#
+   - id: 'tech_animal_husbandry'
+     name: 'Animal Husbandry'
+     beaker_cost: 2000.0
+     cost: 15000.0
+     points: 200
+     require_techs: 'tech_pottery'
+#
+   - id: 'tech_extraction'
+     name: 'Extraction'
+     beaker_cost: 2000.0
+     cost: 15000.0
+     points: 200
+     require_techs: 'tech_mining'
+#
+   - id: 'tech_fermentation'
+     name: 'Fermentation'
+     beaker_cost: 2000.0
+     cost: 15000.0
+     points: 200
+     require_techs: 'tech_mining'
+#
+   - id: 'tech_welding'
+     name: 'Welding'
+     beaker_cost: 2000.0
+     cost: 15000.0
+     points: 200
+     require_techs: 'tech_iron'
+#==============================#
+#==========> Tier 3 <==========#
+#==============================#
+   - id: 'tech_mysticism'
+     name: 'Mysticism'
+     beaker_cost: 4500.0
+     cost: 35000.0
+     points: 450
+     require_techs: 'tech_banking'
+#
+   - id: 'tech_masonry'
+     name: 'Masonry'
+     beaker_cost: 4500.0
+     cost: 35000.0
+     points: 450
+     require_techs: 'tech_pottery'
+#
+   - id: 'tech_fortification'
+     name: 'Fortification'
+     beaker_cost: 4500.0
+     cost: 35000.0
+     points: 450
+     require_techs: 'tech_pottery'
+#
+   - id: 'tech_commerce'
+     name: 'Commerce'
+     beaker_cost: 4500.0
+     cost: 35000.0
+     points: 450
+     require_techs: 'tech_forestry'
+#
+   - id: 'tech_production'
+     name: 'Production'
+     beaker_cost: 4500.0
+     cost: 35000.0
+     points: 450
+     require_techs: 'tech_extraction'
+#
+   - id: 'tech_newbie_mechanics'
+     name: 'Newbie Mechanics'
+     beaker_cost: 4500.0
+     cost: 35000.0
+     points: 450
+     require_techs: 'tech_iron'
+#==============================#
+#==========> Tier 4 <==========#
+#==============================#
+   - id: 'tech_code_of_laws'
+     name: 'Code of Laws'
+     beaker_cost: 17500.0
+     cost: 70000.0
+     points: 1750
+     require_techs: 'tech_mysticism'
+#
+   - id: 'tech_breeding'
+     name: 'Breeding'
+     beaker_cost: 17500.0
+     cost: 70000.0
+     points: 1750
+     require_techs: 'tech_animal_husbandry'
+#
+   - id: 'tech_artillery'
+     name: 'Artillery'
+     beaker_cost: 17500.0
+     cost: 70000.0
+     points: 1750
+     require_techs: 'tech_masonry:tech_advanced_fortification'
+#
+   - id: 'tech_advanced_fortification'
+     name: 'Advanced Fortification'
+     beaker_cost: 17500.0
+     cost: 70000.0
+     points: 1750
+     require_techs: 'tech_fortification'
+#
+   - id: 'tech_sailing'
+     name: 'Sailing'
+     beaker_cost: 17500.0
+     cost: 70000.0
+     points: 1750
+     require_techs: 'tech_commerce:tech_fortification'
+#
+   - id: 'tech_trading'
+     name: 'Trading'
+     beaker_cost: 17500.0
+     cost: 70000.0
+     points: 1750
+     require_techs: 'tech_sailing'
+#
+   - id: 'tech_engineering'
+     name: 'Engineering'
+     beaker_cost: 17500.0
+     cost: 70000.0
+     points: 1750
+     require_techs: 'tech_production'
+#
+   - id: 'tech_bronze'
+     name: 'Bronze'
+     beaker_cost: 17500.0
+     cost: 70000.0
+     points: 1750
+     require_techs: 'tech_iron:tech_welding:tech_newbie_mechanics'
+#==============================#
+#==========> Tier 5 <==========#
+#==============================#
+   - id: 'tech_writing'
+     name: 'Bronze'
+     beaker_cost: 30000.0
+     cost: 125000.0
+     points: 3000
+     require_techs: 'tech_code_of_laws'
+#
+   - id: 'tech_gunpowder'
+     name: 'Gunpowder'
+     beaker_cost: 30000.0
+     cost: 125000.0
+     points: 3000
+     require_techs: 'tech_artillery:tech_inspection'
+#
+   - id: 'tech_inspection'
+     name: 'Inspection'
+     beaker_cost: 30000.0
+     cost: 125000.0
+     points: 3000
+     require_techs: 'tech_advanced_fortification:tech_trading'
+#
+   - id: 'tech_specialization'
+     name: 'Specialization'
+     beaker_cost: 30000.0
+     cost: 125000.0
+     points: 3000
+     require_techs: 'tech_engineering'
+#
+   - id: 'tech_smithing'
+     name: 'Smithing'
+     beaker_cost: 30000.0
+     cost: 125000.0
+     points: 3000
+     require_techs: 'tech_bronze:tech_welding'
+#
+   - id: 'tech_improved_mechanics'
+     name: 'Improved Mechanics'
+     beaker_cost: 30000.0
+     cost: 125000.0
+     points: 3000
+     require_techs: 'tech_bronze:tech_newbie_mechanics'
+#==============================#
+#==========> Tier 6 <==========#
+#==============================#
+   - id: 'tech_monarchy'
+     name: 'Monarchy'
+     beaker_cost: 62500.0
+     cost: 400000.0
+     points: 6250
+     require_techs: 'tech_writing'
+#
+   - id: 'tech_nurturing'
+     name: 'Nurturing'
+     beaker_cost: 62500.0
+     cost: 400000.0
+     points: 6250
+     require_techs: 'tech_breeding'
+#
+   - id: 'tech_innovation'
+     name: 'Innovation'
+     beaker_cost: 62500.0
+     cost: 400000.0
+     points: 6250
+     require_techs: 'tech_inspection:tech_engineering'
+#
+   - id: 'tech_malting'
+     name: 'Malting'
+     beaker_cost: 62500.0
+     cost: 400000.0
+     points: 6250
+     require_techs: 'tech_inspection:tech_engineering'
+#
+   - id: 'tech_steel'
+     name: 'Steel'
+     beaker_cost: 62500.0
+     cost: 400000.0
+     points: 6250
+     require_techs: 'tech_bronze:tech_smithing:tech_improved_mechanics'
+#==============================#
+#==========> Tier 7 <==========#
+#==============================#
+   - id: 'tech_currency'
+     name: 'Currency'
+     beaker_cost: 80000.0
+     cost: 750000.0
+     points: 8000
+     require_techs: 'tech_monarchy'
+#
+   - id: 'tech_crafting'
+     name: 'Crafting'
+     beaker_cost: 80000.0
+     cost: 750000.0
+     points: 8000
+     require_techs: 'tech_steel:tech_smithing'
+#==============================#
+#==========> Tier 8 <==========#
+#==============================#
+   - id: 'tech_international_banking'
+     name: 'International Banking'
+     beaker_cost: 100000.0
+     cost: 1250000.0
+     points: 10000
+     require_techs: 'tech_currency'
+#
+   - id: 'tech_genetics'
+     name: 'Genetics'
+     beaker_cost: 100000.0
+     cost: 1250000.0
+     points: 10000
+     require_techs: 'tech_nurturing'
+#
+   - id: 'tech_alchemy'
+     name: 'Alchemy'
+     beaker_cost: 100000.0
+     cost: 1250000.0
+     points: 10000
+     require_techs: 'tech_malting'
+#
+   - id: 'tech_mega_mechanics'
+     name: 'Mega Mechanics'
+     beaker_cost: 100000.0
+     cost: 1250000.0
+     points: 10000
+     require_techs: 'tech_steel:tech_improved_mechanics'
+#==============================#
+#==========> Tier 9 <==========#
+#==============================#
+   - id: 'tech_economics'
+     name: 'Economics'
+     beaker_cost: 375000.0
+     cost: 2500000.0
+     points: 37500
+     require_techs: 'tech_international_banking'
+#
+   - id: 'tech_titanium'
+     name: 'Titanium'
+     beaker_cost: 375000.0
+     cost: 2500000.0
+     points: 37500
+     require_techs: 'tech_steel:tech_crafting:tech_mega_mechanics'
+#==============================#
+#=========> Tier  10 <=========#
+#==============================#
+   - id: 'tech_systematic_loading'
+     name: 'Systematic Loading'
+     beaker_cost: 500000.0
+     cost: 5000000.0
+     points: 50000
+     require_techs: 'tech_economics'
+#
+   - id: 'tech_atom_developing'
+     name: 'Atom Developing'
+     beaker_cost: 500000.0
+     cost: 5000000.0
+     points: 50000
+     require_techs: 'tech_alchemy'
+#
+   - id: 'tech_magic'
+     name: 'Magic'
+     beaker_cost: 500000.0
+     cost: 5000000.0
+     points: 50000
+     require_techs: 'tech_titanium:tech_crafting'
+#
+   - id: 'tech_advanced_mechanics'
+     name: 'Advanced Mechanics'
+     beaker_cost: 500000.0
+     cost: 5000000.0
+     points: 50000
+     require_techs: 'tech_titanium:tech_mega_mechanics'
